kube/deploy/core/monitoring/fluentbit/app/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: &app fluentbit
  namespace: *app
spec:
  endpointSelector: {}
  egress:
    - toEntities:
        - host
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
            - port: "10250"
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: victoria-logs
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: victoria-logs-single
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: &app fluentbit
  namespace: *app
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: *app
  policyTypes: [Ingress, Egress]
  ingress:
    - from:
        - ipBlock:
            cidr: "${IP_ROUTER_VLAN_K8S:=127.0.0.1}/32"
      ports:
        - port: 51401
          protocol: TCP
        - port: 51401
          protocol: UDP
